# builder-workspace

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  GEMINI_SETUP.md  Makefile  PROJECTS.org  QUEUE_SYSTEM.md  README.org  ai_pro_cat.py  arxiv_cache.json  categories.csv  category_projects_for_test_training.csv  cleanup_agents.sh  coordinate_projects.sh  coordinator.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup_claude_agents.sh  submit_task.py  test_gemini.py
.beads/: interactions.jsonl  metadata.json
3DHousingConfigurator/: project_info.json  tasks.json
3DPrintedHousingFactory/: project_info.json
AI-PoweredContentGeneration/: project_info.json
AI-PoweredFinancialAdviser/: project_info.json
AI-PoweredPetBehaviorMonitor/: _.sh  project_info.json  tasks.json
AI-PoweredPhilosophyAssistant/: project_info.json
AI-PoweredRetailAnalytics/: project_info.json
AIArchitect/: tasks.json
AIArchitectAssistant/: project_info.json
AIArtCurator/: tasks.json
AIAssistantDeveloper/: project_info.json  tasks.json
AIAssistedForensics/: project_info.json  tasks.json
AIAssistedRefactoring/: project_info.json
AICareerCoach/: project_info.json  tasks.json
AICodeReviewer/: project_info.json
AICodeStyleGuide/: tasks.json
AIComposer/: project_info.json
AIConceptExplainer/: project_info.json
AIConstructionDocumentAnalyzer/: project_info.json
AIConstructionPlanner/: project_info.json  tasks.json
AIConstructionWasteOptimizer/: project_info.json
AICustomerServiceOrchestrator/: tasks.json
AIDeceptionTechnology/: project_info.json  tasks.json
AIDocumentationQualityChecker/: tasks.json
AIEcoSystemOrchestrator/: project_info.json  tasks.json
AIEnabledAlignmentAdvisor/: project_info.json  tasks.json
AIEnabledDemandResponse/: tasks.json
AIEnergyGridOptimizer/: tasks.json
AIFinancialAdvisor/: tasks.json
AIHousingMarketPredictor/: project_info.json  tasks.json
AIInterrogationAssistant/: project_info.json  tasks.json
AILegalResearchAssistant/: project_info.json
AILiteraryCollaborator/: tasks.json
AILogAnalyzer/: project_info.json
AILogisticsOptimizer/: project_info.json
AIPersonalShopper/: tasks.json
AIPet/: tasks.json
AIPoweredEnergyStorage/: project_info.json
projects/AICodeReviewer/: CLAUDE.md  Makefile  README.md  project_info.json  pyproject.toml  spec.org  tasks.json
projects/AICodeReviewer/aicodereviewer/: __init__.py  ai_suggester.py  code_analyzer.py  main.py  security_checker.py  ui_generator.py  vcs_integrator.py
projects/AICodeReviewer/config/: project_info.json  tasks.json
projects/AICodeReviewer/tests/: test_code_analyzer.py
(+6507 files in other folders)
