[tool.poetry]
name = "builder-workspace"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
files-to-prompt = "^0.3"
datasets = "^2.21.0"
anthropic = "^0.34.0"
click = "^8.1.7"
orgparse = "^0.4.20231004"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"
google-generativeai = "^0.8.1"
astor = "^0.8.1"
scipy = "^1.14.1"
boto3 = "^1.35.20"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
ollama = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
