[tool.poetry]
name = "builder-workspace"
version = "0.1.0"
description = "A workspace for AI-assisted project management and code generation"
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"
packages = [{include = "coordinator"}]

[tool.poetry.dependencies]
python = "^3.11"
files-to-prompt = "^0.3"
datasets = "^2.21.0"
anthropic = "^0.34.0"
click = "^8.1.7"
orgparse = "^0.4.20231004"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"
google-generativeai = "^0.8.1"
astor = "^0.8.1"
scipy = "^1.14.1"
boto3 = "^1.35.20"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
ollama = "^0.3.3"
openai = "^1.46.1"
chardet = "^5.2.0"
sphinx = "^8.0.2"
prometheus-client = "^0.21.0"
trepan3k = "^1.2.11"
faiss-cpu = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
coordinator = "coordinator.main:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"